force-app/main/default/objects/OpportunityLineItem/fields/Forecasting_Price_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Forecasting_Price_Subtotal__c</fullName>
    <formula>UnitPrice *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasting Price Subtotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>