force-app/main/default/objects/OpportunityLineItem/fields/OEM_Discount__c.field-meta.xml
<CustomField>
    <fullName>OEM_Discount__c</fullName>
    <label>OEM Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>