force-app/main/default/objects/OpportunityLineItem/fields/Product_NEW__c.field-meta.xml
<CustomField>
    <fullName>Product_NEW__c</fullName>
    <formula>PricebookEntry.Product2.Product_NEW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product NEW</label>
    <type>Text</type>
</CustomField>