force-app/main/default/objects/OpportunityLineItem/fields/Sales_Discount_DO_NOT_USE_Helper__c.field-meta.xml
<CustomField>
    <fullName>Sales_Discount_DO_NOT_USE_Helper__c</fullName>
    <formula>ROUND(Sales_Discount__c * 100,0)</formula>
    <label>Sales Discount (DO NOT USE - Helper)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>