force-app/main/default/objects/OpportunityLineItem/fields/Sales_Discount_roundnumber__c.field-meta.xml
<CustomField>
    <fullName>Sales_Discount_roundnumber__c</fullName>
    <formula>TEXT(Sales_Discount_DO_NOT_USE_Helper__c ) &amp;
IF(NOT(ISBLANK(Sales_Discount_DO_NOT_USE_Helper__c)), &quot;%&quot;, &quot;&quot;)</formula>
    <label>Sales Discount</label>
    <type>Text</type>
</CustomField>