force-app/main/default/objects/OpportunityLineItem/fields/Subtotal_Calculation_roll_up__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Calculation_roll_up__c</fullName>
    <label>Subtotal_Calculation_roll_up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>