force-app/main/default/objects/OpportunityLineItem/fields/Via_Flow__c.field-meta.xml
<CustomField>
    <fullName>Via_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Via Flow</label>
    <type>Checkbox</type>
</CustomField>