force-app/main/default/objects/OpportunityLineItem/fields/Volume_Discount__c.field-meta.xml
<CustomField>
    <fullName>Volume_Discount__c</fullName>
    <label>Volume Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>